Project 0/CustomPackage/main/default/objects/Game_Payment__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>CardType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Cards</valueSetName>
    </valueSet>
</CustomField>