Project 0/CustomPackage/main/default/objects/Game_Payment__c/fields/Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder__c</fullName>
    <label>Card Holder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Game_Account__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipLabel>Game Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>