Project 0/CustomPackage/main/default/objects/Game_Payment__c/fields/Card_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_Name__c</fullName>
    <label>Card Holder Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>