Project 0/CustomPackage/main/default/objects/Game_Payment__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Card Number</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>