Project 0/CustomPackage/main/default/objects/Game_Payment__c/fields/Card_Security_Code__c.field-meta.xml
<CustomField>
    <fullName>Card_Security_Code__c</fullName>
    <label>Card Security Code</label>
    <length>3</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>