Project 0/CustomPackage/main/default/objects/Game_Payment__c/fields/Game_Payment_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>Game_Payment_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Payment Look Up</label>
    <referenceTo>Game_Payment__c</referenceTo>
    <relationshipLabel>Game Payments</relationshipLabel>
    <relationshipName>Game_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>