Project 0/CustomPackage/main/default/objects/Game_Payment__c/validationRules/Credit_Card_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Card_Number_Length</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX(  Card_Number__c  , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
    <errorDisplayField>Card_Number__c</errorDisplayField>
    <errorMessage>Credit Card Number Invalid</errorMessage>
</ValidationRule>