Project 0/CustomPackage/main/default/objects/Game_Payment__c/validationRules/Security_Code_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Security_Code_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Card_Security_Code__c  , 
&quot;((\\d{3}))?&quot; ))</errorConditionFormula>
    <errorDisplayField>Card_Security_Code__c</errorDisplayField>
    <errorMessage>Security Code Invalid</errorMessage>
</ValidationRule>